--- a/PixelMania/public/login.html
+++ b/PixelMania/public/login.html
@@ -16,16 +16,11 @@
         <div>
             <div class="container formContainer">
                 <div class="row">
-                    <div class="container instructionsContainer">
-                        <br />
-                        Instructions
-                        <br /><br />
-                        You are a little colored dot and your only goal is to eat and survive. If you hit one of the bouncing red balls, you will be halved in size. If you hit someone who is smaller than you, then you eat them. If you hit someone larger, then you get eaten.
-                        <br /><br />
-                        Use the arrow keys to move.
-                        <br /><br />
-                        Enjoy!
-                        <br /><br />
+                    <div class="instructionsContainer">
+                        <h2>Instructions</h2>
+                        <p>You are a little colored dot and your only goal is to eat and survive. If you hit one of the bouncing red balls, you will be halved in size. If you hit someone who is smaller than you, then you eat them. If you hit someone larger than you, then you get eaten.</p>
+                        <p>Use the arrow keys to move.</p>
+                        <p>Enjoy!</p>
                     </div>
                     <form id="loginForm" class="form-inline" role="form" action="javascript:void(0);">
                         <div class="form-group">
