finishing touches for new event messaging system

--- a/PixelMania/public/login.html
+++ b/PixelMania/public/login.html
@@ -3,34 +3,32 @@
     <head>
         <title>Pixel Mania</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="stylesheets/reset.css">
-        <link rel="stylesheet" href="stylesheets/bootstrap.min.css">
-        <link rel="stylesheet" href="stylesheets/style.css">
-        <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+        <link type="text/css" rel="stylesheet" href="stylesheets/reset.css" />
+        <link type="text/css" rel="stylesheet" href="stylesheets/bootstrap.min.css" />
+        <link type="text/css" rel="stylesheet" href="stylesheets/style.css" />
+        <link type="image/x-icon" rel="shortcut icon" href="images/favicon.ico" />
         <script type="text/javascript" src="javascripts/jquery-1.12.0.min.js"></script>
         <script type="text/javascript" src="javascripts/jquery.cookie.js"></script>
         <script type="text/javascript" src="javascripts/login.js"></script>
     </head>
     <body>
         <h1>Pixel Mania</h1>
-        <div>
-            <div class="container formContainer">
-                <div class="row">
-                    <div class="instructionsContainer">
-                        <h2>Instructions</h2>
-                        <p>You are a little colored dot and your only goal is to eat and survive. If you hit one of the bouncing red balls, you will be halved in size. If you hit someone who is smaller than you, then you eat them. If you hit someone larger than you, then you get eaten.</p>
-                        <p>Use the arrow keys to move.</p>
-                        <p>Enjoy!</p>
-                    </div>
-                    <form id="loginForm" class="form-inline" role="form" action="javascript:void(0);">
-                        <div class="form-group">
-                            <input type="text" class="form-control" id="username" placeholder="Username" autofocus>
-                        </div>
-                        <div class="form-group">
-                            <button type="submit" id="loginSubmit" class="btn btn-primary">Play</button>
-                        </div>
-                    </form>
+        <div class="container" id="formContainer">
+            <div class="row">
+                <div class="instructionsContainer">
+                    <h2>Instructions</h2>
+                    <p>You are a little colored dot and your only goal is to eat and survive. If you hit one of the bouncing red balls, you will be halved in size. If you hit someone who is smaller than you, then you eat them. If you hit someone larger than you, then you get eaten.</p>
+                    <p>Use the arrow keys to move.</p>
+                    <p>Enjoy!</p>
                 </div>
+                <form id="loginForm" class="form-inline" role="form" action="javascript:void(0);">
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="username" placeholder="Username" autofocus maxlength="20">
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" id="loginSubmit" class="btn btn-primary">Play</button>
+                    </div>
+                </form>
             </div>
         </div>
     </body>
