--- a/PixelMania/public/highscores.html
+++ b/PixelMania/public/highscores.html
@@ -3,29 +3,31 @@
     <head>
         <title>Pixel Mania</title>
         <meta charset="utf-8">
-        <link type="text/css" rel="stylesheet" href="stylesheets/reset.css">
-        <link type="text/css" rel="stylesheet" href="stylesheets/bootstrap.min.css">
-        <link type="text/css" rel="stylesheet" href="stylesheets/style.css">
-        <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+        <link type="text/css" rel="stylesheet" href="stylesheets/reset.css" />
+        <link type="text/css" rel="stylesheet" href="stylesheets/bootstrap.min.css" />
+        <link type="text/css" rel="stylesheet" href="stylesheets/style.css" />
+        <link type="image/x-icon" rel="shortcut icon" href="images/favicon.ico" />
         <script type="text/javascript" src="javascripts/jquery-1.12.0.min.js"></script>
         <script type="text/javascript" src="javascripts/jquery.cookie.js"></script>
         <script type="text/javascript" src="javascripts/highscores.js"></script>
     </head>
     <body>
-        <h1>Pixel Mania</h1>
-        <div>
-            <h2>Top 10 High Scores</h2>
-            <table id="highScoresTable">
-                <thead>
-                    <tr>
-                        <th>Username</th>
-                        <th>Score</th>
-                    </tr>
-                </thead>
-                <tbody>
-                </tbody>
-            </table>
-            <a href="/" id="again">Play Again</a>
+        <div class="mainContainer">
+            <h1>Pixel Mania</h1>
+            <div id="highScoresContainer">
+                <h2>Top 10 High Scores</h2>
+                <table id="highScoresTable">
+                    <thead>
+                        <tr>
+                            <th>Username</th>
+                            <th>Score</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
+                <a href="/" id="again">Play Again</a>
+            </div>
         </div>
     </body>
 </html>
