--- a/PixelMania/public/index.html
+++ b/PixelMania/public/index.html
@@ -6,19 +6,23 @@
 		<link type="text/css" rel="stylesheet" href="stylesheets/reset.css" />
 		<link type="text/css" rel="stylesheet" href="stylesheets/bootstrap.min.css" />
 		<link type="text/css" rel="stylesheet" href="stylesheets/style.css" />
-		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+		<link type="image/x-icon" rel="shortcut icon" href="images/favicon.ico" />
 	</head>
-	
 	<body>
-		<h1>Pixel Mania</h1>
-		<div id="gameContainer">
-			<canvas id="gameCanvas" height=500 width=1000></canvas>
-			<div id="messageBoard">
-				<h3 class="message">You are:</h3>
-				<span id="yourColor"></span>
-				<h3 class="message" id="msgReplace"></h3>
+		<div class="mainContainer">
+			<h1>Pixel Mania</h1>
+			<div id="gameContainer">
+				<canvas id="gameCanvas" height=500 width=1000></canvas>
+				<div id="messageBoard">
+					<div class="left halfWidth">
+						<h3 id="usernameMessage" class="message">You are:<span id="yourColor"></span><span id="yourUsername"></span></h3>
+					</div>
+					<div class="right halfWidth">
+						<h3 id="eventMessage" class="message"></h3>
+					</div>
+				</div>
+				<input id="quit" class="btn btn-danger btn-lg" type="submit" value="Quit" />
 			</div>
-			<input id="quit" class="btn btn-danger btn-lg" type="submit" value="Quit" />
 		</div>
 		<script type="text/javascript" src="javascripts/socket.io.js"></script>
 		<script type="text/javascript" src="javascripts/requestAnimationFrame.js"></script>
