replaced the duplicate message on Broadway

--- a/Broadway/index.html
+++ b/Broadway/index.html
@@ -38,13 +38,13 @@
         <div class="col">
           <img src="develop.svg" alt="Code Closing Tag">
           <h2>Develop</h2>
-          <p>Use modern tools to turn your design into a web site</p>
+          <p>Use modern tools to turn your design into a web site.</p>
           <a href="#" class="learn">Learn More</a>
         </div>
         <div class="col" class="last">
           <img src="deploy.svg" alt="Up Arrow">
           <h2>Deploy</h2>
-          <p>Use modern tools to turn your design into a web site</p>
+          <p>Deploy quickly and easily with our user-friendly GUI.</p>
           <a href="#" class="learn">Learn More</a>
         </div>
       </div>
