added 7 new projects to my portfolio

--- a/index.html
+++ b/index.html
@@ -77,6 +77,17 @@
                 <div class="row">
                     <div class="col-xs-6 col-sm-4">
                         <article class="tile wow fadeInUp" data-wow-duration="0.3s">
+                            <p class="projectName">Office Competition Ranking</p>
+                            <a href="http://ec2-54-200-192-157.us-west-2.compute.amazonaws.com:3021/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/OfficeCompetitionRanking.png" alt="Office Competition Ranking" /></a>
+                            <div class="projectNotes">
+                                <p class="projectDescription">Full stack app for leaderboard rankings for games like ping pong.</p>
+                                <p class="projectBuiltWith"><b>Built with:</b> MongoDB, Express, Node.js, Passport, jQuery</p>
+                                <p class="projectRepo"><a href="https://github.com/thawkin3/office-competition-ranking" target="_blank">View in GitHub</a></p>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="col-xs-6 col-sm-4">
+                        <article class="tile wow fadeInUp" data-wow-duration="0.3s">
                             <p class="projectName">Totes Votes</p>
                             <a href="http://ec2-54-200-192-157.us-west-2.compute.amazonaws.com:3012/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/TotesVotes.png" alt="Totes Votes" /></a>
                             <div class="projectNotes">
@@ -165,6 +176,17 @@
                     </div>
                     <div class="col-xs-6 col-sm-4">
                         <article class="tile wow fadeInUp" data-wow-duration="0.3s">
+                            <p class="projectName">React+Redux Walking Skeleton</p>
+                            <a href="../redux-example/build/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/ReduxExample.png" alt="Redux Example" /></a>
+                            <div class="projectNotes">
+                                <p class="projectDescription">Walking skeleton of a React+Redux app built using create-react-app.</p>
+                                <p class="projectBuiltWith"><b>Built with:</b> React.js, Redux</p>
+                                <p class="projectRepo"><a href="https://github.com/thawkin3/redux-example" target="_blank">View in GitHub</a></p>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="col-xs-6 col-sm-4">
+                        <article class="tile wow fadeInUp" data-wow-duration="0.3s">
                             <p class="projectName">Comment Board</p>
                             <a href="http://ec2-54-200-192-157.us-west-2.compute.amazonaws.com:3010/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/CommentBoard.png" alt="Comment Board" /></a>
                             <div class="projectNotes">
@@ -225,7 +247,29 @@
                             <div class="projectNotes">
                                 <p class="projectDescription">Battle enemies, find weapons, eat food, defeat the boss.</p>
                                 <p class="projectBuiltWith"><b>Built with:</b> React.js</p>
-                                <p class="projectRepo"><a href="https://github.com/thawkin3/dungeonCrawler" target="_blank">View in GitHub</a></p>
+                                <p class="projectRepo"><a href="https://github.com/thawkin3/dungeon-crawler" target="_blank">View in GitHub</a></p>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="col-xs-6 col-sm-4">
+                        <article class="tile wow fadeInUp" data-wow-duration="0.3s">
+                            <p class="projectName">Drum Machine</p>
+                            <a href="../drum-machine/build/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/DrumMachine.png" alt="Drum Machine" /></a>
+                            <div class="projectNotes">
+                                <p class="projectDescription">Click on the drum pads to hear each sound.</p>
+                                <p class="projectBuiltWith"><b>Built with:</b> React.js</p>
+                                <p class="projectRepo"><a href="https://github.com/thawkin3/drum-machine" target="_blank">View in GitHub</a></p>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="col-xs-6 col-sm-4">
+                        <article class="tile wow fadeInUp" data-wow-duration="0.3s">
+                            <p class="projectName">Camera</p>
+                            <a href="https://ec2-54-200-192-157.us-west-2.compute.amazonaws.com/Camera/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Camera.png" alt="Camera" /></a>
+                            <div class="projectNotes">
+                                <p class="projectDescription">Desktop camera app that let's you take a picture and download it using the HTML5 getUserMedia API. (Note: HTTPS is required.)</p>
+                                <p class="projectBuiltWith"><b>Built with:</b> jQuery, getUserMedia API</p>
+                                <p class="projectRepo"><a href="https://github.com/thawkin3/Camera" target="_blank">View in GitHub</a></p>
                             </div>
                         </article>
                     </div>
@@ -535,6 +579,39 @@
                                 <p class="projectDescription">Website design concept.</p>
                                 <p class="projectBuiltWith"><b>Built with:</b> HTML, CSS, Bootstrap</p>
                                 <p class="projectRepo"><a href="https://github.com/thawkin3/201R/tree/master/Shutterbugg" target="_blank">View in GitHub</a></p>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="col-xs-6 col-sm-4">
+                        <article class="tile wow fadeInUp" data-wow-duration="0.3s">
+                            <p class="projectName">Technical Documentation Page</p>
+                            <a href="../TechnicalDocumentationPage/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/TechnicalDocumentationPage.png" alt="Technical Documentation Page" /></a>
+                            <div class="projectNotes">
+                                <p class="projectDescription">Example technical documentation for React Native.</p>
+                                <p class="projectBuiltWith"><b>Built with:</b> HTML, CSS, Bootstrap</p>
+                                <p class="projectRepo"><a href="https://github.com/thawkin3/TechnicalDocumentationPage" target="_blank">View in GitHub</a></p>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="col-xs-6 col-sm-4">
+                        <article class="tile wow fadeInUp" data-wow-duration="0.3s">
+                            <p class="projectName">Product Landing Page</p>
+                            <a href="../ProductLandingPage/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/ProductLandingPage.png" alt="Product Landing Page" /></a>
+                            <div class="projectNotes">
+                                <p class="projectDescription">Example product landing page.</p>
+                                <p class="projectBuiltWith"><b>Built with:</b> HTML, CSS, Bootstrap</p>
+                                <p class="projectRepo"><a href="https://github.com/thawkin3/ProductLandingPage" target="_blank">View in GitHub</a></p>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="col-xs-6 col-sm-4">
+                        <article class="tile wow fadeInUp" data-wow-duration="0.3s">
+                            <p class="projectName">Survey Form</p>
+                            <a href="../SurveyForm/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/SurveyForm.png" alt="Survey Form" /></a>
+                            <div class="projectNotes">
+                                <p class="projectDescription">Example survey form to demonstrate styling with Bootstrap.</p>
+                                <p class="projectBuiltWith"><b>Built with:</b> HTML, CSS, Bootstrap</p>
+                                <p class="projectRepo"><a href="https://github.com/thawkin3/SurveyForm" target="_blank">View in GitHub</a></p>
                             </div>
                         </article>
                     </div>
