--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -4,14 +4,12 @@
 		<title>Tic-Tac-Toe</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 		<link rel="stylesheet" type="text/css" href="style.css" />
-		<link href='//fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lato:400,300" />
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script src="script.js"></script>
 	</head>
-
 	<body>
 		<h1>Tic-Tac-Toe</h1>
-		
 		<div id="container">
 			<h3 class="buttons start">NEW GAME</h3>
 		</div>
