--- a/ConnectFour/index.html
+++ b/ConnectFour/index.html
@@ -3,10 +3,10 @@
 	<head>
 		<title>Connect Four</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
-    	<link href="style.css" rel="stylesheet" type="text/css">
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" type="text/javascript"></script>
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+    	<link href="//fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css" />
+    	<link href="style.css" rel="stylesheet" type="text/css" />
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" type="text/javascript"></script>
 		<script src="script.js" type="text/javascript"></script>
 	</head>
 	<body>
@@ -17,6 +17,7 @@
 		<div id="gameContainer">
 			<div id="redWin">RED WINS!</div>
 			<div id="blackWin">BLACK WINS!</div>
+			<div id="quitEarly">GAME WAS STOPPED</div>
 			<div id="start">CLICK HERE TO PLAY</div>
 
 			<div id="gridTop">
