--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <div class="col-xs-6 col-sm-4">
                         <article class="tile wow fadeInUp" data-wow-duration="0.3s">
                             <p class="projectName">Qrappy Bird</p>
-                            <a href="QrappyBird/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/QrappyBird.png" alt="Qrappy Bird" /></a>
+                            <a href="QrappyBird/#/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/QrappyBird.png" alt="Qrappy Bird" /></a>
                             <div class="projectNotes">
                                 <p class="projectDescription">Everyone's favorite Flappy Bird knock-off, complete with a theme song.</p>
                                 <p class="projectBuiltWith"><b>Built with:</b> MongoDB, Express, AngularJS, Node.js, requestAnimationFrame</p>
