updated job experience and skills; added bubble ball, stacks on stacks on stacks, and exercise tracker

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         <!-- CSS -->
         <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Montserrat:400,700,900">
-        <link rel="stylesheet" type="text/css" href="styles/animate.css" >
+        <!-- <link rel="stylesheet" type="text/css" href="styles/animate.css" > -->
         <link rel="stylesheet" type="text/css" href="styles/style.css" >
         <!-- JavaScript -->
         <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="scripts/wow.min.js"></script>
+        <!-- <script type="text/javascript" src="scripts/wow.min.js"></script> -->
         <script type="text/javascript" src="scripts/script.js"></script>
     </head>
 
@@ -171,6 +171,28 @@
                                 <p class="projectDescription">Parody app for helping you communicate with your boss.</p>
                                 <p class="projectBuiltWith"><b>Built with:</b> Express, Node.js, jQuery</p>
                                 <p class="projectRepo"><a href="https://github.com/thawkin3/201R/tree/master/CorporateBSGenerator" target="_blank">View in GitHub</a></p>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="col-xs-6 col-sm-4">
+                        <article class="tile wow fadeInUp" data-wow-duration="0.3s">
+                            <p class="projectName">Bubble Ball</p>
+                            <a href="http://ec2-54-200-192-157.us-west-2.compute.amazonaws.com/BubbleBall/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/BubbleBall.png" alt="Bubble Ball" /></a>
+                            <div class="projectNotes">
+                                <p class="projectDescription">HTML5 game in which you must dodge all the incoming obstacles to stay alive.</p>
+                                <p class="projectBuiltWith"><b>Built with:</b> Canvas element, requestAnimationFrame, Vanilla JavaScript</p>
+                                <p class="projectRepo"><a href="https://github.com/thawkin3/BubbleBall" target="_blank">View in GitHub</a></p>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="col-xs-6 col-sm-4">
+                        <article class="tile wow fadeInUp" data-wow-duration="0.3s">
+                            <p class="projectName">Stacks on Stacks on Stacks</p>
+                            <a href="http://ec2-54-200-192-157.us-west-2.compute.amazonaws.com/stacks-on-stacks-on-stacks/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/StacksOnStacksOnStacks.png" alt="Stacks on Stacks on Stacks" /></a>
+                            <div class="projectNotes">
+                                <p class="projectDescription">HTML5 game in which you must jump on top of incoming platforms to make the tallest stack.</p>
+                                <p class="projectBuiltWith"><b>Built with:</b> jQuery, CSS3 animations</p>
+                                <p class="projectRepo"><a href="https://github.com/thawkin3/stacks-on-stacks-on-stacks" target="_blank">View in GitHub</a></p>
                             </div>
                         </article>
                     </div>
@@ -629,6 +651,17 @@
                 <div class="row">
                     <div class="col-xs-6 col-sm-4">
                         <article class="tile wow fadeInUp" data-wow-duration="0.3s">
+                            <p class="projectName">Exercise Tracker</p>
+                            <a href="http://ec2-54-200-192-157.us-west-2.compute.amazonaws.com:3022/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/ExerciseTracker.png" alt="Exercise Tracker" /></a>
+                            <div class="projectNotes">
+                                <p class="projectDescription">Create a user, log workouts, and view past workouts with this microservice and GUI.</p>
+                                <p class="projectBuiltWith"><b>Built with:</b> MongoDB, Express, Node.js</p>
+                                <p class="projectRepo"><a href="https://github.com/thawkin3/exercise-tracker" target="_blank">View in GitHub</a></p>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="col-xs-6 col-sm-4">
+                        <article class="tile wow fadeInUp" data-wow-duration="0.3s">
                             <p class="projectName">Timestamp Microservice</p>
                             <a href="http://ec2-54-200-192-157.us-west-2.compute.amazonaws.com:3500/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/TimeStampMicroservice.png" alt="Timestamp Microservice" /></a>
                             <div class="projectNotes">
@@ -918,11 +951,11 @@
                 <h3>SKILLS</h3>
                 <h4 id="hard">HARD SKILLS</h4>
                 <div class="row">
-                    <p>I'm most fluent in the MEAN/MERN stack (MongoDB, Express, AngularJS, React.js, Node.js) and love to develop full stack applications. I also have experience working with PHP and MySQL back-ends to create RESTful API services. I prefer to work with the latest and greatest front-end JavaScript frameworks, but I'm also well-versed in vanilla JavaScript and jQuery.</p>
+                    <p>I'm most fluent in the MEAN/MERN stack (MongoDB, Express, AngularJS, React.js, Node.js) and love to develop full stack applications. I also have experience working with PHP and MySQL back-ends to create RESTful API services. I prefer to work with the latest and greatest front-end JavaScript frameworks, but I'm also well-versed in vanilla JavaScript and jQuery. I'm also an AWS Certified Developer Associate.</p>
                 </div>
                 <h4 id="soft">SOFT SKILLS</h4>
                 <div class="row" id="softRow">
-                    <p>I'm a driven, self-motivated, lifelong learner. I'm always reading something new or watching online courses to further expand my skillset. I'm dependable, a great communicator with both technical and non-technical people, can meet and beat project timelines, and am a team player.</p>
+                    <p>I'm a driven, self-motivated, lifelong learner. I'm always reading something new or watching online courses to further expand my skillset. I'm dependable, a great communicator with both technical and non-technical people, can meet and beat project timelines, and am a team player. I love to provide thought leadership and mentor others.</p>
                 </div>
             </section>
             
@@ -934,9 +967,14 @@
             <section class="container" id="work">
                 <h3>WORK EXPERIENCE</h3>
                 <div class="row">
+                    <p><b>UI DEVELOPER IV (SENIOR DEVELOPER)</b></p>
+                    <p>Younique</p>
+                    <p>October 2018 - present</p>
+                </div>
+                <div class="row">
                     <p><b>UI DEVELOPER</b></p>
                     <p>Younique</p>
-                    <p>September 2017 - present</p>
+                    <p>September 2017 - October 2018</p>
                 </div>
                 <div class="row">
                     <p><b>FRONT END DEVELOPER - ENGINEERING SERVICES</b></p>
