--- a/index.html
+++ b/index.html
@@ -936,8 +936,10 @@
             <section class="container" id="about">
                 <h3 class="text-uppercase">About</h3>
                 <div class="row">
-                    <p>I'm a self-taught UI Developer with a passion for learning and creating. I have a bachelor's degree in Statistics with a minor in Psychology from Brigham Young University, but mid-way through my undergraduate studies, I took an interest in web development and began teaching myself through online courses such as Udemy, Pluralsight, Codecademy, Khan Academy, HackerRank, and FreeCodeCamp. I took a few computer science classes at BYU as well to learn the MEAN stack and excelled at those. I began building web applications in my free time to gain experience and then landed a development job at Qualtrics on their Engineering Services team. After a few years at Qualtrics, I took a UI Developer role at Younique where I'm working with React.js to expand our component library, refactor/improve our website, and establish best practices in UI development for the rest of the company.</p>
-                    <p>My hobbies include snowboarding, biking, skydiving, fire juggling, reading, playing drums and keyboard, and spending time with my beautiful wife and daughter.</p>
+                    <p>I'm a self-taught UI Developer with a passion for learning and creating. I have a bachelor's degree in Statistics with a minor in Psychology from Brigham Young University, but mid-way through my undergraduate studies, I took an interest in web development and began teaching myself through online courses such as Udemy, Pluralsight, Codecademy, Khan Academy, HackerRank, and FreeCodeCamp. I took a few computer science classes at BYU as well to learn the MEAN stack and excelled at those. I began building web applications in my free time to gain experience and then landed a development job at Qualtrics on their Engineering Services team.</p>
+                	<p>After a few years at Qualtrics, I took a UI Developer role at Younique where I worked with React.js to expand our component library, refactor/improve our website, and establish best practices in UI development for the rest of the company. I spent a lot of time mentoring junior developers and often taught workshops on React, test-driven development, and unit testing. After a year I was promoted to be a Senior UI Developer.</p>
+                	<p>In early 2019 I joined Instructure, where I currently work. I'm working on an application called Bridge Perform, which focuses on something near and dear to my heart, employee development and career management.</p>
+                    <p>My hobbies include snowboarding, biking, skydiving, juggling (fire!), reading, playing drums and keyboard, and spending time with my beautiful wife and daughter.</p>
                 </div>
             </section>
             
@@ -967,9 +969,14 @@
             <section class="container" id="work">
                 <h3 class="text-uppercase">Work Experience</h3>
                 <div class="row">
+                    <p><b class="text-uppercase">Software Engineer</b></p>
+                    <p>Instructure</p>
+                    <p>February 2019 - present</p>
+                </div>
+                <div class="row">
                     <p><b class="text-uppercase">UI Developer IV (Senior Developer)</b></p>
                     <p>Younique</p>
-                    <p>October 2018 - present</p>
+                    <p>October 2018 - February 2019</p>
                 </div>
                 <div class="row">
                     <p><b class="text-uppercase">UI Developer</b></p>
