added react-concepts-demo to my portfolio

--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
             <section class="container" id="applications">
                 <h2 class="text-uppercase">Web Applications</h2>
                 <div class="row">
-                    <div class="col-xs-6 col-sm-4">
+                	<div class="col-xs-6 col-sm-4">
                         <article class="tile wow fadeInUp" data-wow-duration="0.3s">
-                            <h3 class="projectName">Office Competition Ranking</h3>
-                            <a href="http://tylerhawkins.info:3021/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/OfficeCompetitionRanking.png" alt="Office Competition Ranking" /></a>
+                            <h3 class="projectName">React Concepts Demo</h3>
+                            <a href="http://tylerhawkins.info/react-concepts-demo/build" target="_blank"><img class="img-responsive" src="Images/Thumbnails/ReactConceptsDemo.png" alt="Office Competition Ranking" /></a>
                             <div class="projectNotes">
-                                <p class="projectDescription">Full stack app for leaderboard rankings for games like ping pong.</p>
-                                <p class="projectBuiltWith"><b>Built with:</b> MongoDB, Express, Node.js, Passport, jQuery</p>
-                                <p class="projectRepo"><a href="https://github.com/thawkin3/office-competition-ranking" target="_blank">View in GitHub</a></p>
+                                <p class="projectDescription">Example demos to illustrate different key pieces of React's functionality, including some of its newest features.</p>
+                                <p class="projectBuiltWith"><b>Built with:</b> React.js, React Router</p>
+                                <p class="projectRepo"><a href="https://github.com/thawkin3/react-concepts-demo" target="_blank">View in GitHub</a></p>
                             </div>
                         </article>
                     </div>
@@ -94,6 +94,17 @@
                                 <p class="projectDescription">Full stack voting app complete with authentication and CRUD API.</p>
                                 <p class="projectBuiltWith"><b>Built with:</b> MongoDB, Express, AngularJS, Node.js, C3.js</p>
                                 <p class="projectRepo"><a href="https://github.com/thawkin3/totes-votes" target="_blank">View in GitHub</a></p>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="col-xs-6 col-sm-4">
+                        <article class="tile wow fadeInUp" data-wow-duration="0.3s">
+                            <h3 class="projectName">Office Competition Ranking</h3>
+                            <a href="http://tylerhawkins.info:3021/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/OfficeCompetitionRanking.png" alt="Office Competition Ranking" /></a>
+                            <div class="projectNotes">
+                                <p class="projectDescription">Full stack app for leaderboard rankings for games like ping pong.</p>
+                                <p class="projectBuiltWith"><b>Built with:</b> MongoDB, Express, Node.js, Passport, jQuery</p>
+                                <p class="projectRepo"><a href="https://github.com/thawkin3/office-competition-ranking" target="_blank">View in GitHub</a></p>
                             </div>
                         </article>
                     </div>
