--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                     <div class="col-xs-6 col-sm-4">
                         <article class="tile wow fadeInUp" data-wow-duration="0.3s">
                             <h3 class="projectName">Camera</h3>
-                            <a href="https://ec2-54-200-192-157.us-west-2.compute.amazonaws.com/Camera/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Camera.png" alt="Camera" /></a>
+                            <a href="https://tylerhawkins.info/Camera/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Camera.png" alt="Camera" /></a>
                             <div class="projectNotes">
                                 <p class="projectDescription">Desktop camera app that let's you take a picture and download it using the HTML5 getUserMedia API. (Note: HTTPS is required.)</p>
                                 <p class="projectBuiltWith"><b>Built with:</b> jQuery, getUserMedia API</p>
