Updated hard-coded ip address in the TimeStamp microservice

--- a/TimeStamp/public/index.html
+++ b/TimeStamp/public/index.html
@@ -28,7 +28,7 @@
         </div>
 
         <h3>OR</h3>
-        <h3>Navigate to http://54.200.192.157:3500/gettime/?q=<br/> and provide either a UNIX timestamp or a normal date as a parameter in the query string, and JSON will be returned.</h3>
+        <h3>Navigate to <span class="currentAddress"></span>gettime/?q=<br/> and provide either a UNIX timestamp or a normal date as a parameter in the query string, and JSON will be returned.</h3>
     </body>
 
 <hmtl>
