--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                             <h3 class="projectName">Pokedex</h3>
                             <a href="http://tylerhawkins.info:3003/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Pokedex.png" alt="Pokedex" /></a>
                             <div class="projectNotes">
-                                <p class="projectDescription">Gotch catch 'em all. Keep track of your Pokemon here by adding an image and a name.</p>
+                                <p class="projectDescription">Gotta catch 'em all. Keep track of your Pokemon here by adding an image and a name.</p>
                                 <p class="projectBuiltWith"><b>Built with:</b> MongoDB, Express, AngularJS, Node.js, C3.js</p>
                                 <p class="projectRepo"><a href="https://github.com/thawkin3/201R/tree/master/angularNodeMongoPoki" target="_blank">View in GitHub</a></p>
                             </div>
