fixed two more typos

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                             <h3 class="projectName">Camera</h3>
                             <a href="https://tylerhawkins.info/Camera/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Camera.png" alt="Camera" /></a>
                             <div class="projectNotes">
-                                <p class="projectDescription">Desktop camera app that let's you take a picture and download it using the HTML5 getUserMedia API. (Note: HTTPS is required.)</p>
+                                <p class="projectDescription">Desktop camera app that lets you take a picture and download it using the HTML5 getUserMedia API. (Note: HTTPS is required.)</p>
                                 <p class="projectBuiltWith"><b>Built with:</b> jQuery, getUserMedia API</p>
                                 <p class="projectRepo"><a href="https://github.com/thawkin3/Camera" target="_blank">View in GitHub</a></p>
                             </div>
@@ -432,7 +432,7 @@
                             <h3 class="projectName">Firebase Chatroom</h3>
                             <a href="http://tylerhawkins.info:3007/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/FirebaseChat.png" alt="Firebase Chatroom" /></a>
                             <div class="projectNotes">
-                                <p class="projectDescription">WebRTC Chatroom built with a Firebase database from Google.</p>
+                                <p class="projectDescription">WebRTC chatroom built with a Firebase database from Google.</p>
                                 <p class="projectBuiltWith"><b>Built with:</b> AngularJS, Firebase</p>
                                 <p class="projectRepo"><a href="https://github.com/thawkin3/201R/tree/master/firebaseTest" target="_blank">View in GitHub</a></p>
                             </div>
