some more description corrections

--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@
                             <h3 class="projectName">Bar Chart of GDP</h3>
                             <a href="../D3/bar-chart-gdp/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/BarChartGDP.png" alt="Bar Chart of GDP" /></a>
                             <div class="projectNotes">
-                                <p class="projectDescription">Bar Chart of GDP from the USA.</p>
+                                <p class="projectDescription">Bar chart of GDP from the USA.</p>
                                 <p class="projectBuiltWith"><b>Built with:</b> D3.js</p>
                                 <p class="projectRepo"><a href="https://github.com/thawkin3/bar-chart-gdp" target="_blank">View in GitHub</a></p>
                             </div>
@@ -754,7 +754,7 @@
                             <h3 class="projectName">Scatterplot of Doping</h3>
                             <a href="../D3/scatterplot-doping/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/ScatterplotDoping.png" alt="Scatterplot of Doping" /></a>
                             <div class="projectNotes">
-                                <p class="projectDescription">Scatterplot of Doping in professional bicycling.</p>
+                                <p class="projectDescription">Scatterplot of doping in professional bicycling.</p>
                                 <p class="projectBuiltWith"><b>Built with:</b> D3.js</p>
                                 <p class="projectRepo"><a href="https://github.com/thawkin3/scatterplot-doping" target="_blank">View in GitHub</a></p>
                             </div>
@@ -765,7 +765,7 @@
                             <h3 class="projectName">Heat Map of Global Temperature</h3>
                             <a href="../D3/heat-map-global-temp/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/HeatMapGlobalTemp.png" alt="Heat Map of Global Temperature" /></a>
                             <div class="projectNotes">
-                                <p class="projectDescription">Heat Map of Global Temperature from 1753 to 2015.</p>
+                                <p class="projectDescription">Heat map of global temperature from 1753 to 2015.</p>
                                 <p class="projectBuiltWith"><b>Built with:</b> D3.js</p>
                                 <p class="projectRepo"><a href="https://github.com/thawkin3/heat-map-global-temp" target="_blank">View in GitHub</a></p>
                             </div>
@@ -776,7 +776,7 @@
                             <h3 class="projectName">Force Directed Graph of Countries</h3>
                             <a href="../D3/force-directed-graph-countries/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/ForceDirectedGraphCountries.png" alt="Force Directed Graph of Countries" /></a>
                             <div class="projectNotes">
-                                <p class="projectDescription">Force Directed Graph of State Contiguity. See which countries are neighbors. Drag a node on the map to see the data move.</p>
+                                <p class="projectDescription">Force directed graph of state contiguity. See which countries are neighbors. Drag a node on the map to see the data move.</p>
                                 <p class="projectBuiltWith"><b>Built with:</b> D3.js</p>
                                 <p class="projectRepo"><a href="https://github.com/thawkin3/force-directed-graph-countries" target="_blank">View in GitHub</a></p>
                             </div>
@@ -787,7 +787,7 @@
                             <h3 class="projectName">World Map of Meteorites</h3>
                             <a href="../D3/world-map-meteorites/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/WorldMapMeteorites.png" alt="World Map of Meteorites" /></a>
                             <div class="projectNotes">
-                                <p class="projectDescription">World Map of Meteorite Landings. Zoom in, click and drag.</p>
+                                <p class="projectDescription">World map of meteorite landings. Zoom in, click and drag.</p>
                                 <p class="projectBuiltWith"><b>Built with:</b> D3.js</p>
                                 <p class="projectRepo"><a href="https://github.com/thawkin3/world-map-meteorites" target="_blank">View in GitHub</a></p>
                             </div>
