adds JavaScript30 to portfolio

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 	<div class="col-xs-6 col-sm-4">
                         <article class="tile wow fadeInUp" data-wow-duration="0.3s">
                             <h3 class="projectName">React Concepts Demo</h3>
-                            <a href="http://tylerhawkins.info/react-concepts-demo/build" target="_blank"><img class="img-responsive" src="Images/Thumbnails/ReactConceptsDemo.png" alt="Office Competition Ranking" /></a>
+                            <a href="http://tylerhawkins.info/react-concepts-demo/build" target="_blank"><img class="img-responsive" src="Images/Thumbnails/ReactConceptsDemo.png" alt="React Concepts Demo" /></a>
                             <div class="projectNotes">
                                 <p class="projectDescription">Example demos to illustrate different key pieces of React's functionality, including some of its newest features.</p>
                                 <p class="projectBuiltWith"><b>Built with:</b> React.js, React Router</p>
@@ -94,6 +94,17 @@
                                 <p class="projectDescription">Full stack voting app complete with authentication and CRUD API.</p>
                                 <p class="projectBuiltWith"><b>Built with:</b> MongoDB, Express, AngularJS, Node.js, C3.js</p>
                                 <p class="projectRepo"><a href="https://github.com/thawkin3/totes-votes" target="_blank">View in GitHub</a></p>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="col-xs-6 col-sm-4">
+                        <article class="tile wow fadeInUp" data-wow-duration="0.3s">
+                            <h3 class="projectName">JavaScript 30 Challenge</h3>
+                            <a href="http://tylerhawkins.info/javascript30" target="_blank"><img class="img-responsive" src="Images/Thumbnails/JavaScript30.png" alt="JavaScript 30" /></a>
+                            <div class="projectNotes">
+                                <p class="projectDescription">30 JavaScript apps in 30 days.</p>
+                                <p class="projectBuiltWith"><b>Built with:</b> Vanilla JavaScript</p>
+                                <p class="projectRepo"><a href="https://github.com/thawkin3/javascript30" target="_blank">View in GitHub</a></p>
                             </div>
                         </article>
                     </div>
